fix: add async and parallel support for reference search